# chattybox

./: README.md  pyproject.toml
chattybox/: client_app.py  gui.py  server_app.py
tests/: test_chattybox.py
