[tool.poetry]
name = "chattybox"
version = "0.1.0"
description = ""
authors = ["alx-b"]

[tool.poetry.dependencies]
python = "^3.9"
dearpygui = "^0.8.54"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyflakes = "^2.3.1"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
